--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
-0.0.2 Warn, but otherwise ignore illegal assignments:
-    $css.azimuth = 'over-yonder'; # has no affect
+0.0.2
+    - Warn, but otherwise ignore illegal assignments:
+      $css.azimuth = 'over-yonder'; # has no affect
+    - handle default dependencies:
+      -- border-color on color
+      -- text-align on direction
+      (See README.md Properties appendix)
 0.0.1 Initial release
