--- a/Changes
+++ b/Changes
@@ -1,3 +1,5 @@
+0.0.3 CSS::Declarations::Units
+    - Use 'but' for role application, not global 'does'.
 0.0.2
     - Warn, but otherwise ignore illegal assignments:
       $css.azimuth = 'over-yonder'; # has no affect
