--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.0.4 CSS::Declarations:
+     - allow list assignment. E.g.: $css.new: :background-position<top left>;
+       shortcut for: $css.new: :background-position("top left");
 0.0.3 CSS::Declarations::Units
     - Use 'but' for role application, not global 'does'.
 0.0.2
