--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.3.9
+   - Adjust to Rakudo 2018.06+, including unordered
+     hash keys and rw proxy accessors
 0.3.8
    - Rename module CSS::Declarations -> CSS::Properties
 0.3.7
