--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 0.3.9
    - Adjust to Rakudo 2018.06+, including unordered
      hash keys and rw proxy accessors
+   - Added +css and -css as experimental infix operators
 0.3.8
    - Rename module CSS::Declarations -> CSS::Properties
 0.3.7
@@ -15,9 +16,9 @@
     - Fix over-zealous optimization:
       This: border:5pt solid; border-color:red green blue yellow;
       Was optimized to: border:5pt solid red green blue yellow;
-      Which is a step too far. The optimizer now leaves the above alone.
-      The general rule is that a property with multiple terms won't be
-      further optimized.
+      Which is a step too far. The optimize() method now leaves the
+      above alone. The general rule is that a property with multiple
+      terms won't be further optimized.
 0.3.4
     CSS::Declarations::Font
     - Add fc-pattern method. a computed pattern for fontconfig matching
