--- a/Changes
+++ b/Changes
@@ -1,8 +1,10 @@
+0.3.10
+   - Minor adjusments for Rakudo 2018.11+ Bleed
 0.3.9
    - Adjust to Rakudo 2018.06+, including unordered
      hash keys and rw proxy accessors
    - Added +css and -css as experimental infix operators
-   - Minor refactors to ast and optmise methods
+   - Minor refactors to ast and optimize methods
 0.3.8
    - Rename module CSS::Declarations -> CSS::Properties
 0.3.7
