--- a/Changes
+++ b/Changes
@@ -1,3 +1,6 @@
+0.4.3
+   - Renamed role CSS::Properties::Units::Type ->
+     CSS::Properties::Units. Added .scale() method
 0.4.2
    - Add CSS::Properties::Font .Str method
 0.4.1
