--- a/Changes
+++ b/Changes
@@ -1,7 +1,9 @@
 0.5.2
-   - refactor .can() .dispatch() and .FALLBACK() methods
-   - reactor 'dpi', 'dpcm', and 'dppx' units. Express as reciprocals
+   - refactored .can() .dispatch() and .FALLBACK() methods
+   - rework 'dpi', 'dpcm', and 'dppx' units. Express as reciprocals
      of 'in', 'cm', and 'px'
+   - fixed CSS::Properities::Font measure() method to always return
+     undimensioned quantities.
 0.5.1
    - rename sources *.pm6 -> *.rakumod
 0.5.0
