--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 {{$NEXT}}
-   - Fix handling of percentage values for margin-width and padding-width.
-     Ignore (treat as zero for border-width). Better conformance (hopefully)
+   - Fix handling of percentage values for margin and padding. Ignore
+     (treat as zero) for border-width. Better conformance (hopefully)
      with https://www.w3.org/TR/CSS2/box.html#border-properties
 
 0.5.2
