--- a/Changes
+++ b/Changes
@@ -1,4 +1,8 @@
 {{$NEXT}}
+   - Fixed font inheritance and improved other optimisations E.g.
+     background-repeat: no-repeat; background-position: 50% 75%;
+     now combines to: background:no-repeat 50% 75%;
+   - Fixed property assignment sequence #13
 
 0.6.1  2021-03-16T10:56:25+13:00
    - Fix computed() and inherit() regressions #11
