widthdraw css-width(), css-height(); convert from-ast(),to-ast() to subs

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Changed from-ast() and to-ast() from methods to subroutines
 
 0.6.2  2021-03-24T09:19:40+13:00
    - Fixed font inheritance and improved other optimisations E.g.
@@ -6,7 +7,7 @@
      now combines to: background:no-repeat 50% 75%;
    - Fixed property assignment sequence #13; border: 2px; border-bottom: 1px;
      now works as expected.
-   - Fixed dropping of some terms with zef first value #14; background-position: 0 50%
+   - Fixed dropping of some terms with zero first value #14; background-position: 0 50%
      now serialises as expected
    - Fixed box property optmisations #15; border-style: solid; border-bottom-style: none;
      now serialises to: border-left-style:solid; border-right-style:solid; border-top-style:solid;
