--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Factored out CSS::Properties::Optimizer from CSS::Properties
 
 0.6.3  2021-04-01T15:21:18+13:00
     - Widthdraw box css-width() and css-height() methods - Not
