--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Add ast(:keep-defaults) option. These need to be retained in CSS::Rulesets when
+      writing.
 
 0.6.5  2021-04-07T09:10:49+12:00
     - Optimize to parent properties, for example 'background-color:blue;'
