--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
-    - Remove deprecated classes CSS::Properties::Box and CSS::Properties::PageBox
+    - Remove classes:
+      -- CSS::Properties::Box (deprecated)
+      -- CSS::Properties::PageBox (deprecated)
+      -- CSS::Properties::Edges (internal)
     - Rename class CSS::Properties::Font -> CSS::Font
 
 0.6.6  2021-04-22T15:56:11+12:00
