--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+   - Add CSS::Font::Descriptor; specialized class for @font-face rules.
 
 0.7.4  2021-08-19T09:24:58+12:00
    - Adjust at-font-face.t tests to CSS::Module 0.5.9+, which groups
