--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
     - Use Raku FontConfig package for font matching
+    - Add new CSS::Font::Pattern class to encapsulate font matching
+    - CSS::Font pattern() now returns pattern objects
 
 0.7.8  2021-11-21T05:44:57+13:00
     - Tweak measure() method
