--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Fix cloning of a property-set that has explicit inherited
+      properties #19
 
 0.8.3  2022-06-16T09:53:11+12:00
     - Fix test in t/01-property-basic.t, failing with CSS::Module v0.5.11+
