--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Fixed some SVG tests for CSS::Module 0.6.2+
 
 0.9.1  2022-08-24T08:45:33+12:00
     - Add documentation on lengths and measuring
