--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Handle measuring of SVG opacity & stroke related properties
 
 0.9.2  2022-08-28T06:10:12+12:00
     - Fixed some SVG tests for CSS::Module 0.6.2+
