--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 {{$NEXT}}
+    Finesse tests doc for CSS::Module 0.6.6, which supports:
+    - typeless extensions properties, which can hold any value
+    - :vivify mode - allow any property
 
 0.9.3  2022-08-30T07:42:02+12:00
     - Handle measuring of SVG opacity & stroke related properties
