--- a/Changes
+++ b/Changes
@@ -1,4 +1,6 @@
 {{$NEXT}}
+    - Add FontConf 0.1.4+ :best($n) and :all options to
+      find-font() method
 
 0.9.5  2022-09-30T05:13:03+13:00
     - fix parsing of rgb//hsl alpha channel as a percentage
