Fix inheritance of font-size
Need to also update $!em for calculations.

--- a/Changes
+++ b/Changes
@@ -3,7 +3,7 @@
       find-font() method
 
 0.9.5  2022-09-30T05:13:03+13:00
-    - fix parsing of rgb//hsl alpha channel as a percentage
+    - fix parsing of rgb/hsl alpha channel as a percentage
 
 0.9.4  2022-09-07T06:58:00+12:00
     Finesse tests & doc for CSS::Module 0.6.6, which supports:
