Fix cloning of 'em'
Closes #23.

--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Fix cloning of 'em' #23
 
 0.9.6  2024-08-29T06:32:07+12:00
     - Add FontConf 0.1.4+ :best($n) and :all options to
@@ -6,7 +7,7 @@
     - Fix inheritance of font-size via inherit() method
 
 0.9.5  2022-09-30T05:13:03+13:00
-    - fix parsing of rgb/hsl alpha channel as a percentage
+    - Fix parsing of rgb/hsl alpha channel as a percentage
 
 0.9.4  2022-09-07T06:58:00+12:00
     Finesse tests & doc for CSS::Module 0.6.6, which supports:
