--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Handle Pairs, List, Hash methods
 
 0.9.7  2024-09-04T10:56:52+12:00
     - Fix setting of 'em' in cloning and copying #23
