--- a/Changes
+++ b/Changes
@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Support evaluation of calc() expressions in property values
 
 0.10.3  2025-10-31T09:08:12+13:00
     - Remove deprecated CSS::Properties::Font
